--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   carousel_slider: ^5.1.1
   extended_nested_scroll_view: ^6.2.1
   shimmer: ^3.0.0
+  video_player: ^2.10.0
 
 dev_dependencies:
   flutter_test:
