--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   shimmer: ^3.0.0
   video_player: ^2.10.0
   chewie: ^1.12.1
+  subtitle: ^0.1.4
 
 dev_dependencies:
   flutter_test:
