--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   video_player: ^2.10.0
   chewie: ^1.12.1
   subtitle: ^0.1.4
+  provider: ^6.1.5
 
 dev_dependencies:
   flutter_test:
