--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   chewie: ^1.12.1
   subtitle: ^0.1.4
   provider: ^6.1.5
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
