--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.4
   flutter_riverpod: ^2.6.1
   riverpod_annotation: ^2.6.1
-  go_router: ^15.2.4
+  go_router: ^16.0.0
   freezed: ^3.0.6
   json_serializable: ^6.9.5
   freezed_annotation: ^3.0.0
@@ -50,6 +50,10 @@ dependencies:
   subtitle: ^0.1.4
   provider: ^6.1.5
   cached_network_image: ^3.4.1
+  media_kit: ^1.2.0
+  media_kit_video: ^1.3.0
+  media_kit_libs_video: ^1.0.6
+  html: ^0.15.6
 
 dev_dependencies:
   flutter_test:
